--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to HyperDev!</title>
-    <meta name="description" content="A cool thing made with HyperDev">
+    <title>Metric-Imperial Values Converter</title>
+    <meta name="description" content="Metric-Imperial Converter">
     <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>
-        ISQA_2 - Metric/Imp Converter
+        FreeCodeCamp Info Security & Quality Assurance_2 - Metric/Imp Converter
       </h1>
     </header>
    
